# rust-ultrasonic

./: Cargo.toml  LICENSE  README.md  build.rs  partitions.csv  readMe.txt  sdkconfig.defaults
_cargo/: config.toml
examples/: tests.rs
src/: lcd_1106.rs  main.rs  statics.rs  ultrasonic.rs  web_socket.rs
src/www/: ws_guessing_game.html
