[package]
name = "ultrasonic-rust"
version = "0.1.0"
authors = ["yaniv.choen.1 <yaniv.choen.1@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false } # HW
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", branch = "master", optional = true, default-features = true }
esp-idf-svc = { version = "0.46", optional = true, default-features = true } # web, wifi
embedded-svc = { version = "0.25", optional = true, default-features = false }
anyhow = {version = "1", features = ["backtrace"]}
# yaniv add
# display-interface = "0.4"
embedded-graphics = "0.7"
# embedded-hal = "0.2"
sh1106 = "0.4.0"
critical-section = { version = "1.1.1", features = ["std"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# esp32-hal = "0.10"
#  async-tungstenite = "*"
#  async-std = "1.12.0"
#futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
#futures-io = { version = "0.3", default-features = false, features = ["std"] }
#pin-project-lite = "0.2"

[build-dependencies]
embuild = "0.31.2"

[dev-dependencies]
critical-section  = "1.1.1"

[package.metadata.espflash]
partition_table = "./partitions.csv"

[[example]]
name = "tests"
